--- a/Frontend/HotelProject.WebUI/Views/ErrorPage/Error404.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/ErrorPage/Error404.cshtml
@@ -38,7 +38,7 @@
                                 <form class="mt-5 mb-5">
 
                                     <div class="text-center mb-4 mt-4">
-                                        <a href="/Default/Index" class="btn btn-primary">Anasayfaya Dön</a>
+                                        <a href="/AdminAbout/Index" class="btn btn-primary">Anasayfaya Dön</a>
                                     </div>
                                 </form>
                                 <div class="text-center">
