--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -83,7 +83,7 @@
                 </a>
             </li>
             <li>
-                <a href="/AdminWorkLocation/Index/" aria-expanded="false">
+                <a href="/Settings/Index/" aria-expanded="false">
                     <i class="fa fa-cogs menu-icon"></i><span class="nav-text">Ayarlar</span>
                 </a>
             </li>
