--- a/Frontend/HotelProject.WebUI/Views/AdminWorkLocation/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminWorkLocation/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="card-title">
-    <h4>Otel Lokasyonları</h4>
+    <h4>OTEL LOKASYONLARI</h4>
 </div>
 <table class="table table-striped">
     <tr>
