--- a/Frontend/HotelProject.WebUI/Views/Role/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Role/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="card-title">
-    <h4>Rol Listesi</h4>
+    <h4>ROL LİSTESİ</h4>
 </div>
 <table class="table table-striped">
     <tr>
