--- a/Frontend/HotelProject.WebUI/Views/RoleAssign/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/RoleAssign/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="card-title">
-    <h4>Kullanıcı Listesi</h4>
+    <h4>KULLANICI LİSTESİ</h4>
 </div>
 <table class="table table-xs mb-0">
     <thead>
