--- a/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -20,5 +20,6 @@
 @using HotelProject.WebUI.Dtos.DashboardDto
 @using HotelProject.WebUI.Models.Mail
 @using HotelProject.WebUI.Models.Role
+@using HotelProject.WebUI.Models.Settings
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
