--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -33,6 +33,11 @@
                 </a>
             </li>
             <li>
+                <a href="/AdminBooking/Index/" aria-expanded="false">
+                    <i class="fa fa-calendar menu-icon"></i><span class="nav-text">Rezervasyonlar</span>
+                </a>
+            </li>
+            <li>
                 <a href="/AdminRoom/Index/" aria-expanded="false">
                     <i class="fa fa-bed menu-icon"></i><span class="nav-text">Odalar</span>
                 </a>
