--- a/Frontend/HotelProject.WebUI/Views/Booking/AddBooking.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Booking/AddBooking.cshtml
@@ -39,14 +39,14 @@
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="form-floating date" id="date3" data-target-input="nearest">
-                                    <input type="text" class="form-control datetimepicker-input" asp-for="CheckIn" placeholder="Giriş Tarihi" data-target="#date3" data-toggle="datetimepicker" />
+                                <div class="form-floating date" data-target-input="nearest">
+                                    <input type="datetime-local" class="form-control datetimepicker-input" asp-for="CheckIn" placeholder="Giriş Tarihi" data-target="#date3" data-toggle="datetimepicker" />
                                     <label for="CheckIn">Giriş Tarihi</label>
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="form-floating date" id="date4" data-target-input="nearest">
-                                    <input type="text" class="form-control datetimepicker-input" asp-for="CheckOut" placeholder="Çıkış Tarihi" data-target="#date4" data-toggle="datetimepicker" />
+                                <div class="form-floating date" data-target-input="nearest">
+                                    <input type="datetime-local" class="form-control datetimepicker-input" asp-for="CheckOut" placeholder="Çıkış Tarihi" data-target="#date4" data-toggle="datetimepicker" />
                                     <label for="CheckOut">Çıkış Tarihi</label>
                                 </div>
                             </div>
