--- a/Frontend/HotelProject.WebUI/Views/AdminStaff/AddStaff.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminStaff/AddStaff.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
+<h1>Personel Ekleme Sayfası</h1>
 <form method="post">
     <label>Personel Adı</label>
     <input type="text" asp-for="Name" class="form-control" />
