--- a/Frontend/HotelProject.WebUI/Views/AdminStaff/UpdateStaff.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminStaff/UpdateStaff.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
+<h1>Personel Güncelleme Sayfası</h1>
 <form method="post">
     <input type="hidden" asp-for="StaffID" />
     <label>Personel Adı</label>
