--- a/Frontend/HotelProject.WebUI/Views/AdminBooking/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminBooking/Index.cshtml
@@ -35,11 +35,11 @@
                     <td><span class="label gradient-1 rounded">@item.Status</span></td>
                 </tr>
                 <tr>
-                    <td><a href="/AdminBooking/ApprovedReservation2/@item.BookingID" class="btn mb-1 btn-rounded btn-outline-success">Onayla</a></td>
-                    <td><a href="" class="btn mb-1 btn-rounded btn-outline-danger">İptal Et</a></td>
-                    <td><a href="" class="btn mb-1 btn-rounded btn-outline-primary">Güncelle</a></td>
-                    <td><a href="" class="btn mb-1 btn-rounded btn-outline-warning">Beklet</a></td>
-                    <td><a href="" class="btn mb-1 btn-rounded btn-outline-info">Detaylar</a></td>
+                    <td><a href="/AdminBooking/ApprovedReservation/@item.BookingID" class="btn mb-1 btn-rounded btn-outline-success">Onayla</a></td>
+                    <td><a href="/AdminBooking/CancelReservation/@item.BookingID" class="btn mb-1 btn-rounded btn-outline-danger">İptal Et</a></td>
+                    <td><a href="/AdminBooking/UpdateReservation/@item.BookingID" class="btn mb-1 btn-rounded btn-outline-primary">Güncelle</a></td>
+                    <td><a href="/AdminBooking/WaitReservation/@item.BookingID" class="btn mb-1 btn-rounded btn-outline-warning">Beklet</a></td>
+                    <td><a href="/AdminBooking/DetailsReservation/@item.BookingID" class="btn mb-1 btn-rounded btn-outline-info">Detaylar</a></td>
                 </tr>
             }
         </tbody>
