--- a/Frontend/HotelProject.WebUI/Views/AdminStaff/GetStaff.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminStaff/GetStaff.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="card-title">
-    <h4>PERSONELLER</h4>
+    <h4>Personel Detayları</h4>
 </div>
 <table class="table table-striped">
     <tr>
