--- a/Frontend/HotelProject.WebUI/Views/AdminRoom/AddRoom.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminRoom/AddRoom.cshtml
@@ -4,6 +4,10 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
+<div class="card-title">
+    <h4>Odak Ekleme Sayfası</h4>
+</div>
+
 <form method="post">
     <label>Oda Numarası</label>
     <input type="text" asp-for="RoomNumber" class="form-control" />
