--- a/Frontend/HotelProject.WebUI/Views/AdminRoom/GetRoom.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminRoom/GetRoom.cshtml
@@ -5,8 +5,9 @@
 }
 
 <div class="card-title">
-    <h4>PERSONELLER</h4>
+    <h4>Oda Detayları</h4>
 </div>
+
 <table class="table table-striped">
     <tr>
         <th>Oda ID</th>
