--- a/Frontend/HotelProject.WebUI/Views/AdminService/AddService.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminService/AddService.cshtml
@@ -4,6 +4,10 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
+<div class="card-title">
+    <h4>Hizmet Ekleme Sayfası</h4>
+</div>
+
 <form method="post">
     <label>Hizmet İkonu</label>
     <input type="text" asp-for="ServiceIcon" class="form-control" />
