--- a/Frontend/HotelProject.WebUI/Views/AdminStaff/AddStaff.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminStaff/AddStaff.cshtml
@@ -4,7 +4,10 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
-<h1>Personel Ekleme Sayfası</h1>
+<div class="card-title">
+    <h4>Personel Ekleme Sayfası</h4>
+</div>
+
 <form method="post">
     <label>Personel Adı</label>
     <input type="text" asp-for="Name" class="form-control" />
