--- a/Frontend/HotelProject.WebUI/Views/AdminStaff/UpdateStaff.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminStaff/UpdateStaff.cshtml
@@ -4,7 +4,10 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
-<h1>Personel Güncelleme Sayfası</h1>
+<div class="card-title">
+    <h4>Personel Güncelleme Sayfası</h4>
+</div>
+
 <form method="post">
     <input type="hidden" asp-for="StaffID" />
     <label>Personel Adı</label>
