--- a/Frontend/HotelProject.WebUI/Views/AdminWorkLocation/AddWorkLocation.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminWorkLocation/AddWorkLocation.cshtml
@@ -4,6 +4,10 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
+<div class="card-title">
+    <h4>Lokasyon Ekleme Sayfası</h4>
+</div>
+
 <form method="post">
     <label>Lokasyon Adı</label>
     <input type="text" asp-for="WorkLocationName" class="form-control" />
