--- a/Frontend/HotelProject.WebUI/Views/Settings/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Settings/Index.cshtml
@@ -4,8 +4,9 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
-<h1 class="page-title">Profil Bilgileri ve Şifre Güncelleme Sayfası</h1>
-<br />
+<div class="card-title">
+    <h4>PERSONEL BİLGİLERİ GÜNCELLEME SAYFASI</h4>
+</div>
 
 <form method="post">
     <label>Ad</label>
