--- a/Frontend/HotelProject.WebUI/Views/AdminBooking/UpdateReservation.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminBooking/UpdateReservation.cshtml
@@ -4,6 +4,10 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
+<div class="card-title">
+    <h4>Rezervasyon Güncelleme Sayfası</h4>
+</div>
+
 <form method="post">
     <input type="hidden" asp-for="BookingID" />
     <label>Misafir Ad</label>
