--- a/Frontend/HotelProject.WebUI/Views/AdminRoom/UpdateRoom.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminRoom/UpdateRoom.cshtml
@@ -4,6 +4,10 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
+<div class="card-title">
+    <h4>Oda Güncelleme Sayfası</h4>
+</div>
+
 <form method="post">
     <input type="hidden" asp-for="RoomID" />
     <label>Oda Numarası</label>
