--- a/Frontend/HotelProject.WebUI/Views/AdminService/UpdateService.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminService/UpdateService.cshtml
@@ -4,6 +4,10 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
+<div class="card-title">
+    <h4>Hizmet Güncelleme Sayfası</h4>
+</div>
+
 <form method="post">
     <input type="hidden" asp-for="ServiceID" />
     <label>Hizmet İkonu</label>
