--- a/Frontend/HotelProject.WebUI/Views/AdminTestimonial/AddTestimonial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminTestimonial/AddTestimonial.cshtml
@@ -4,6 +4,10 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
+<div class="card-title">
+    <h4>Referans Ekleme Sayfası</h4>
+</div>
+
 <form method="post">
     <label>Referans Adı</label>
     <input type="text" asp-for="Name" class="form-control" />
