--- a/Frontend/HotelProject.WebUI/Views/AdminTestimonial/UpdateTestimonial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminTestimonial/UpdateTestimonial.cshtml
@@ -4,6 +4,10 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
+<div class="card-title">
+    <h4>Referans Güncelleme Sayfası</h4>
+</div>
+
 <form method="post">
     <input type="hidden" asp-for="TestimonialID" />
     <label>Referans Adı</label>
