--- a/Frontend/HotelProject.WebUI/Views/AdminWorkLocation/UpdateWorkLocation.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminWorkLocation/UpdateWorkLocation.cshtml
@@ -4,6 +4,10 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
+<div class="card-title">
+    <h4>Lokasyon Güncelleme Sayfası</h4>
+</div>
+
 <form method="post">
     <input type="hidden" asp-for="WorkLocationID" />
     <label>Lokasyon Adı</label>
