--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -93,7 +93,7 @@
                 </a>
             </li>
             <li>
-                <a href="/AdminWorkLocation/Index/" aria-expanded="false">
+                <a href="/Login/LogOut/" aria-expanded="false">
                     <i class="fa fa-sign-out menu-icon"></i><span class="nav-text">Çıkış Yap</span>
                 </a>
             </li>
